Updated HTML and CSS file
Added the "Interested in Markup?" section, as well as Broomfield's testimonial and the "About Us" section

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Lexend" rel="stylesheet">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" />
+    <link rel="shortcut icon" href="/src/Markup Icon.svg" type="image/x-icon">
 </head>
 <body>
     <nav>
@@ -70,10 +71,44 @@
     </section>
 
     <section>
+        <h3 class="sectionTitle">What other thinks</h3>
+        <div class="testimonialCard">
+            <p class="testimonialContent">
+                Jean's grade entry spreadsheet is a marvel in coding. He took all of my suggestions 
+                and wrote a program that facilitated a need in my professional life. Working with Jean 
+                on this project was easy and he was very helpful and professional. He was able to take 
+                suggestions and criticisms well and adapt his programming to suit changing needs. 
+            </p>
+        </div>
+    </section>
+
+    <section>
+        <h3 class="sectionTitle">Interested in Markup?</h3>
+        <p class="sectionContent">
+            If you are interested in aquiring Markup v2, fill in this form to get your access code.
+        </p>
+
+        <a class="actionButton" target="_blank" href="https://docs.google.com/forms/d/e/1FAIpQLScYohz57AwTdfbgN0uCxnZh2yVC1CZiNOsNgujkt48l33bAiA/viewform?usp=sf_link">
+            Get Markup v2
+            <span class="material-symbols-outlined">arrow_forward</span>
+        </a>
+    </section>
+
+    <section>
         <h3 class="sectionTitle" id="contactUs">Contact Us</h3>
-        <p class="sectionContent" style="width: 50%;">
+        <p class="sectionContent">
             If you have any questions, feedback, or would like to report an issue, contact us at:<br>
             <span class="contactEmail">markupco.software@gmail.com</span>
+        </p>
+    </section>
+
+    <section>
+        <h3 class="sectionTitle" id="contactUs">About Us</h3>
+        <p class="sectionContent">
+            Markup is a company that strives to provide valubale software and tools to 
+            assist teachers and staff in their day-to-day live. It was officially founded 
+            by Jean Bourguignon in November of 2023, and Alessandro Marinelli joined quickly
+            after to aid with logistics.
         </p>
     </section>
 
