--- a/index.html
+++ b/index.html
@@ -106,9 +106,9 @@
         <h3 class="sectionTitle" id="contactUs">About Us</h3>
         <p class="sectionContent">
             Markup is a company that strives to provide valubale software and tools to 
-            assist teachers and staff in their day-to-day live. It was officially founded 
-            by Jean Bourguignon in November of 2023, and Alessandro Marinelli joined quickly
-            after to aid with logistics.
+            assist teachers and staff in their day-to-day live. In November of 2023, Markup was
+            officially found by Jean Bourguignon. Alessandro Marinelli is co-founder and assists
+            with logistics and brainstorming.
         </p>
     </section>
 
