Added Preview of Markup v2

--- a/index.html
+++ b/index.html
@@ -83,6 +83,13 @@
     </section>
 
     <section>
+        <h3 class="sectionTitle">Preview Markup</h3>
+        <div>
+            <img src="/src/preview.png" alt="Markup Preview" class="productPreview">
+        </div>
+    </section>
+
+    <section>
         <h3 class="sectionTitle">Interested in Markup?</h3>
         <p class="sectionContent">
             If you are interested in aquiring Markup v2, fill in this form to get your access code.
@@ -105,10 +112,11 @@
     <section>
         <h3 class="sectionTitle" id="contactUs">About Us</h3>
         <p class="sectionContent">
-            Markup is a company that strives to provide valubale software and tools to 
-            assist teachers and staff in their day-to-day live. In November of 2023, Markup was
-            officially found by Jean Bourguignon. Alessandro Marinelli is co-founder and assists
-            with logistics and brainstorming.
+            Markup is a company that strives to provide valubale software and 
+            tools to assist teachers and staff in their day-to-day live. In 
+            November of 2023, Markup was officially found by Jean Bourguignon. 
+            Alessandro Marinelli is co-founder and assists with logistics and 
+            brainstorming.
         </p>
     </section>
 
