Added security header
Added security description and renamed "Get Markup v2" to "Fill out form"

--- a/index.html
+++ b/index.html
@@ -83,6 +83,16 @@
     </section>
 
     <section>
+        <h3 class="sectionTitle">What about security?</h3>
+        <p class="sectionContent">
+            The program prioritizes the security and ensures that any information 
+            within the spreadsheet remains confidential. While we will have access to the 
+            spreadsheets, we exclusively use this access for  maintaining and improving
+            the software. All of the data will remain confidential and nothing will be shared.
+        </p>
+    </section>
+
+    <section>
         <h3 class="sectionTitle">Preview Markup</h3>
         <div>
             <img src="/src/preview.png" alt="Markup Preview" class="productPreview">
@@ -96,7 +106,7 @@
         </p>
 
         <a class="actionButton" target="_blank" href="https://docs.google.com/forms/d/e/1FAIpQLScYohz57AwTdfbgN0uCxnZh2yVC1CZiNOsNgujkt48l33bAiA/viewform?usp=sf_link">
-            Get Markup v2
+            Fill out form
             <span class="material-symbols-outlined">arrow_forward</span>
         </a>
     </section>
