Fixed issue where icons would render as text
Google icons would sometime render as text, so I just used .svg files

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <div class="cardHolder">
             <div class="card">
                 <div class="cardIcon">
-                    <span class="material-symbols-outlined size4">neurology</span>
+                    <img src="/src/icons/brain.svg" alt="Brain" class="cardIconImage">
                 </div>
                 <h5 class="cardTitle">Intuitive</h5>
                 <p class="cardDetail">User friendly interface</p>
@@ -46,7 +46,7 @@
 
             <div class="card">
                 <div class="cardIcon">
-                    <span class="material-symbols-outlined size4">settings</span>
+                    <img src="/src/icons/gear.svg" alt="Gear" class="cardIconImage">
                 </div>
                 <h5 class="cardTitle">Automatic</h5>
                 <p class="cardDetail">Autonomous calculations</p>
@@ -54,7 +54,7 @@
 
             <div class="card">
                 <div class="cardIcon">
-                    <span class="material-symbols-outlined size4">electric_bolt</span>
+                    <img src="/src/icons/bolt.svg" alt="Bolt" class="cardIconImage">
                 </div>
                 <h5 class="cardTitle">Fast</h5>
                 <p class="cardDetail">Instant updates</p>
@@ -62,7 +62,7 @@
 
             <div class="card">
                 <div class="cardIcon">
-                    <span class="material-symbols-outlined size4">verified_user</span>
+                    <img src="/src/icons/shield.svg" alt="Shiled" class="cardIconImage">
                 </div>
                 <h5 class="cardTitle">Reliable</h5>
                 <p class="cardDetail">Built in Error Protection</p>
