Fixed mistake in about section and added second testimony

--- a/index.html
+++ b/index.html
@@ -79,6 +79,13 @@
                 on this project was easy and he was very helpful and professional. He was able to take 
                 suggestions and criticisms well and adapt his programming to suit changing needs. 
             </p>
+            <br>
+            <p class="testimonialContent">
+                This program made my life easier when my old program Markboard was bought out and then cancelled.  
+                I was able to very quickly set up my classes and track my student's marks in October 2023. This 
+                program not only provides the calculations needed by every teacher, but it also stores an electronic 
+                copy of my marks. I am looking forward to using V2 in the Second Semester.
+            </p>
         </div>
     </section>
 
@@ -124,13 +131,11 @@
         <p class="sectionContent">
             Markup is a company that strives to provide valubale software and 
             tools to assist teachers and staff in their day-to-day live. In 
-            November of 2023, Markup was officially found by Jean Bourguignon. 
+            November of 2023, Markup was officially founded by Jean Bourguignon. 
             Alessandro Marinelli is co-founder and assists with logistics and 
-            brainstorming.
+            marketing
         </p>
     </section>
-
-
 
     <footer>
         <p>Markup - All rights to software reserved</p>
