Fixed typo on homepage

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
     </section>
 
     <section>
-        <h3 class="sectionTitle">What other thinks</h3>
+        <h3 class="sectionTitle">What others think</h3>
         <div class="testimonialCard">
             <p class="testimonialContent">
                 Jean's grade entry spreadsheet is a marvel in coding. He took all of my suggestions 
