Update security paragraph

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <section>
         <h3 class="sectionTitle">What is Markup?</h3>
         <p class="sectionContent">
-            Markup is an all-in-one automated grading software based created
+            Markup is an all-in-one automated grading software created
             on the Googe Sheet foundation to make student marking easy and efficient.
         </p>
     </section>
@@ -93,9 +93,9 @@
         <h3 class="sectionTitle">What about security?</h3>
         <p class="sectionContent">
             The program prioritizes the security and ensures that any information 
-            within the spreadsheet remains confidential. While we will have access to the 
-            spreadsheets, we exclusively use this access for  maintaining and improving
-            the software. All of the data will remain confidential and nothing will be shared.
+            within the spreadsheet remains confidential. No one outside the
+            contract has access to the spreadsheet. Unauthorized entities will have
+            no access to the spreadsheet and all information will be kept confidential.
         </p>
     </section>
 
@@ -133,7 +133,7 @@
             tools to assist teachers and staff in their day-to-day live. In 
             November of 2023, Markup was officially founded by Jean Bourguignon. 
             Alessandro Marinelli is co-founder and assists with logistics and 
-            marketing
+            marketing.
         </p>
     </section>
 
