--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
     <section>
         <h3 class="sectionTitle">What is Markup?</h3>
         <p class="sectionContent">
-            Markup is an all-in-one automated grading software created
-            on the Googe Sheet foundation to make student marking easy and efficient.
+            Markup is a comprehensive and automated grading software built with efficiency and simplicity in mind.
+            Its comes with many features to make any tedious, day-to-day task disappear through the power of automation.
         </p>
     </section>
 
@@ -38,7 +38,7 @@
         <div class="cardHolder">
             <div class="card">
                 <div class="cardIcon">
-                    <img src="/src/icons/brain.svg" alt="Brain" class="cardIconImage">
+                    <span class="material-symbols-outlined size4">neurology</span>
                 </div>
                 <h5 class="cardTitle">Intuitive</h5>
                 <p class="cardDetail">User friendly interface</p>
@@ -46,7 +46,7 @@
 
             <div class="card">
                 <div class="cardIcon">
-                    <img src="/src/icons/gear.svg" alt="Gear" class="cardIconImage">
+                    <span class="material-symbols-outlined size4">settings</span>
                 </div>
                 <h5 class="cardTitle">Automatic</h5>
                 <p class="cardDetail">Autonomous calculations</p>
@@ -54,7 +54,7 @@
 
             <div class="card">
                 <div class="cardIcon">
-                    <img src="/src/icons/bolt.svg" alt="Bolt" class="cardIconImage">
+                    <span class="material-symbols-outlined size4">electric_bolt</span>
                 </div>
                 <h5 class="cardTitle">Fast</h5>
                 <p class="cardDetail">Instant updates</p>
@@ -62,7 +62,7 @@
 
             <div class="card">
                 <div class="cardIcon">
-                    <img src="/src/icons/shield.svg" alt="Shiled" class="cardIconImage">
+                    <span class="material-symbols-outlined size4">verified_user</span>
                 </div>
                 <h5 class="cardTitle">Reliable</h5>
                 <p class="cardDetail">Built in Error Protection</p>
@@ -70,21 +70,14 @@
         </div>
     </section>
 
-    <section>
-        <h3 class="sectionTitle">What others think</h3>
+    <!-- <section>
+        <h3 class="sectionTitle">What other thinks</h3>
         <div class="testimonialCard">
             <p class="testimonialContent">
                 Jean's grade entry spreadsheet is a marvel in coding. He took all of my suggestions 
                 and wrote a program that facilitated a need in my professional life. Working with Jean 
                 on this project was easy and he was very helpful and professional. He was able to take 
                 suggestions and criticisms well and adapt his programming to suit changing needs. 
-            </p>
-            <br>
-            <p class="testimonialContent">
-                This program made my life easier when my old program Markboard was bought out and then cancelled.  
-                I was able to very quickly set up my classes and track my student's marks in October 2023. This 
-                program not only provides the calculations needed by every teacher, but it also stores an electronic 
-                copy of my marks. I am looking forward to using V2 in the Second Semester.
             </p>
         </div>
     </section>
@@ -93,13 +86,13 @@
         <h3 class="sectionTitle">What about security?</h3>
         <p class="sectionContent">
             The program prioritizes the security and ensures that any information 
-            within the spreadsheet remains confidential. No one outside the
-            contract has access to the spreadsheet. Unauthorized entities will have
-            no access to the spreadsheet and all information will be kept confidential.
+            within the spreadsheet remains confidential. While we will have access to the 
+            spreadsheets, we exclusively use this access for  maintaining and improving
+            the software. All of the data will remain confidential and nothing will be shared.
         </p>
-    </section>
+    </section> -->
 
-    <section>
+    <!-- <section>
         <h3 class="sectionTitle">Preview Markup</h3>
         <div>
             <img src="/src/preview.png" alt="Markup Preview" class="productPreview">
@@ -116,6 +109,16 @@
             Fill out form
             <span class="material-symbols-outlined">arrow_forward</span>
         </a>
+    </section> -->
+
+    <section>
+        <h3 class="sectionTitle">Getting an update!</h3>
+        <p class="sectionContent">
+            Markup is currently being updated and rebuilt from scratch to ensure a high-quality product. It will arrive 
+            with new features such as automatic mailing and progress report generation. The security is also being 
+            revamped to use AES, which is one of the most robust encryption algorithms out there and is used by many major
+            organizations, including the American Government.
+        </p>
     </section>
 
     <section>
@@ -126,19 +129,21 @@
         </p>
     </section>
 
-    <section>
+    <!-- <section>
         <h3 class="sectionTitle" id="contactUs">About Us</h3>
         <p class="sectionContent">
             Markup is a company that strives to provide valubale software and 
             tools to assist teachers and staff in their day-to-day live. In 
-            November of 2023, Markup was officially founded by Jean Bourguignon. 
+            November of 2023, Markup was officially found by Jean Bourguignon. 
             Alessandro Marinelli is co-founder and assists with logistics and 
-            marketing.
+            brainstorming.
         </p>
-    </section>
+    </section> -->
+
+
 
     <footer>
-        <p>Markup - All rights to software reserved</p>
+        <p>Markup : All-in-one grading software</p>
     </footer>
 </body>
 </html>
